--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <div class="section">
   <h2>Free Version</h2>
   <p>Single-file conversion. Fully free.</p>
-  <a href="https://github.com/username/obs-to-resolve-converter/releases/download/v1.0/obs_to_resolve_gui_free.zip" target="_blank">
+  <a href="https://github.com/RobertBCode/obs-to-resolve/releases/download/free/obs-to-resolve.rar" target="_blank">
     Download Free Version
   </a>
 </div>
